--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
 <div class="main-content">
   {{>header}}
+  <p>This site was created by Junaid Ahmed. It uses data from mapbox.com weatherstack.com</p>
   <img src="/img/img.png">
 </div>
 {{>footer}}
